--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,10 +56,10 @@ $light : #c3c6c8;
 //    z-index: 99;
 //}
 
-*{
-    font-size: 14px;
-    //overflow-x: hidden;
-}
+//*{
+//    font-size: 14px;
+//    //overflow-x: hidden;
+//}
 
 // swal2 customization
 .swal2-styled.swal2-confirm{
@@ -257,7 +257,7 @@ $light : #c3c6c8;
     border-left: 3px solid var(--bs-secondary);
     border-radius: 0.25rem;
     outline: none;
-    font-size: 13px;
+    //font-size: 13px;
 }
 
 .sidebar .navbar .navbar-nav .nav-link:hover{
@@ -305,7 +305,7 @@ $light : #c3c6c8;
     margin-left: 10px;
     border-radius: 0.25rem;
     color: var(--bs-dark);
-    font-size: 12px;
+    font-size: 13px;
     transition: 0.5s;
     padding: 6px 20px;
     font-weight: 500;
