--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10355,6 +10355,125 @@ textarea.form-control-lg {
   color: #5b987b !important;
 }
 
+.select2 {
+  width: 100% !important;
+}
+
+.select2-container {
+  z-index: 2000;
+}
+
+.select2-search--dropdown {
+  display: none;
+}
+
+.select2-container--default .select2-selection--single {
+  height: 35px !important;
+  background-color: transparent !important;
+  border: none !important;
+  border-bottom: 1px solid #9e9e9e !important;
+  border-radius: 0 !important;
+  outline: none !important;
+}
+
+.select2-container--default .select2-selection--single:focus {
+  border: none !important;
+  outline: none;
+  border-bottom: 2px solid #2d6a4f !important;
+  box-shadow: none !important;
+}
+
+.select2-selection__rendered {
+  line-height: 31px !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+  height: 35px !important;
+  right: 5px !important;
+}
+
+.select2-container.select2-container--focus .select2-selection--multiple {
+  background-color: #fefefe;
+  border-color: #979da6;
+  color: #444;
+}
+
+.select2-container.select2-container--open .select2-selection--single {
+  background-color: #fefefe;
+  border-color: #979da6;
+  color: #444;
+}
+
+.selectric {
+  background-color: #fefefe;
+  border-color: #979da6;
+  color: #444;
+}
+
+.selectric:hover {
+  background-color: #fefefe;
+  border-color: #979da6;
+  color: #444;
+}
+
+.select2-container--default .select2-results__option[aria-selected=true] {
+  background-color: #2d6a4f;
+}
+
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
+  background-color: #2d6a4f;
+}
+
+.select2-container--default .select2-search--dropdown .select2-search__field {
+  background-color: #fefefe;
+  color: #444;
+}
+
+.select2-container--default .select2-search--inline .select2-search__field {
+  color: #444;
+}
+
+.select2-dropdown {
+  background-color: #fefefe;
+  color: #444;
+}
+
+.bootstrap-tagsinput {
+  background-color: #fefefe;
+  border-color: #979da6;
+  color: #444;
+}
+
+.selectgroup-button {
+  background-color: #fefefe;
+}
+
+.custom-switch-indicator {
+  background: #fefefe;
+}
+
+.selectric-items {
+  background-color: #fefefe;
+  box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.3);
+  color: #444;
+}
+
+.selectric-items li {
+  color: #444;
+}
+
+.selectric-items li.selected {
+  background-color: #2d6a4f;
+}
+
+.selectric-items li.highlighted {
+  background-color: #2d6a4f;
+}
+
+.selectric-items li:hover {
+  background-color: #2d6a4f;
+}
+
 .card {
   border: 0 !important;
   overflow: scroll;
@@ -10446,7 +10565,11 @@ textarea.form-control-lg {
   overflow-y: scroll;
   background: var(--bs-secondary);
   transition: 0.5s;
-  z-index: 2001;
+  z-index: 1000;
+}
+
+.sticky-top {
+  z-index: 1001 !important;
 }
 
 .content {
@@ -10454,10 +10577,6 @@ textarea.form-control-lg {
   min-height: 100vh;
   background: var(--bs-secondary);
   transition: 0.5s;
-}
-
-.sticky-top {
-  z-index: 2002 !important;
 }
 
 @media (min-width: 992px) {
@@ -10478,6 +10597,22 @@ textarea.form-control-lg {
 @media (max-width: 991.98px) {
   .sidebar {
     margin-left: -250px;
+  }
+  .sidebar.open {
+    margin-left: 0;
+  }
+  .content {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+@media (max-width: 780px) {
+  .sidebar {
+    margin-left: -250px;
+    z-index: 2003 !important;
+  }
+  .sticky-top {
+    z-index: 2004 !important;
   }
   .sidebar.open {
     margin-left: 0;
@@ -10734,43 +10869,6 @@ textarea.form-control-lg {
 
 .box-content {
   padding: 30px 20px 20px 20px;
-}
-
-.select2 {
-  width: 100% !important;
-}
-
-.select2-container {
-  z-index: 2000;
-}
-
-.select2-search--dropdown {
-  display: none;
-}
-
-.select2-container--default .select2-selection--single {
-  height: 35px !important;
-  background-color: transparent !important;
-  border: none !important;
-  border-bottom: 1px solid #9e9e9e !important;
-  border-radius: 0 !important;
-  outline: none !important;
-}
-
-.select2-container--default .select2-selection--single:focus {
-  border: none !important;
-  outline: none;
-  border-bottom: 2px solid var(--bs-primary) !important;
-  box-shadow: none !important;
-}
-
-.select2-selection__rendered {
-  line-height: 31px !important;
-}
-
-.select2-container--default .select2-selection--single .select2-selection__arrow {
-  height: 35px !important;
-  right: 5px !important;
 }
 
 .calendar__title {
